--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "jest": "26.6.3",
     "msw": "0.29.0",
     "webpack": "5.40.0",
-    "webpack-cli": "4.7.2",
-    "webpack-dev-server": "3.11.2"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
     "axios": "0.21.1",
