--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
-    "axios": "0.21.1",
+    "axios": "^0.21.1",
     "cors": "2.8.5",
     "express": "4.17.1"
   },
